--- a/_posts/2018-01-06-forth.md
+++ b/_posts/2018-01-06-forth.md
@@ -3,6 +3,8 @@ layout: post
 title: Async in Spring (1)
 comment: true
 tags: [Async, Springframework, Spring4]
+changefreq : daily
+priority : 1.0
 ---
 
 Following last article, I talk about *the Async* in Spring Framework. Basically, when we wanted to use *the Async*, we used Thread such as *Callable* and *Future* or Callback which was mentioned by last article. But, function which is ***@Async*** (annotaion in java) has been provided in Spring. 
