--- a/_posts/2018-01-08-fifth.md
+++ b/_posts/2018-01-08-fifth.md
@@ -3,6 +3,8 @@ layout: post
 title: How to use the async in SpringFramework.
 comment: true
 tags: [Async, Springframework, Spring4, ThreadPoolTaskExecutor, TaskExecutor, SimpleAsynTaskExecutor, customize]
+changefreq : daily
+priority : 1.0
 ---
 
 For batching works, in other words, executing works which takes for a long time, we often use the *Async*. In this case,  We can use @Async easily in ***Spring Framework***. But, using @Async is so dangerous without customizing @Async. So, today, I am going to talk about the way that is how to custumize @Async(TaskExecutor). 
