--- a/_posts/2018-01-14-sixth.md
+++ b/_posts/2018-01-14-sixth.md
@@ -3,8 +3,9 @@ layout: post
 title: ListenableFuture in Spring.
 comment: true
 tags: [ListenableFuture, Spring]
-changefreq : daily
-priority : 1.0
+sitemap :
+  changefreq : daily
+  priority : 1.0
 ---
 
 In the last article, I shared my opinion which is about an **async** in the *Spring Framework* and I mentioned the one way that is to use the **async** through *@Async* among the two ways. So, I am going to share my opinion about the **asycn** using ***Callback Function***. I have mentioned about how to use **async** using ***Callback Function*** in Java [**in the previous article**](/2018/01/06/forth.html) (It was in Spring, not Java). Then, is it possible to use the **FutureTaks** in Spring? At least, my answer is 'No'. That's why *async* is controlled by Spring. To use the ***Callback Function*** in Spring, we can use [***ListenableFuture***](https://docs.spring.io/spring/docs/current/javadoc-api/org/springframework/util/concurrent/ListenableFuture.html) which is provided by Spring.(Actually, though there are more *Future* class provided by Spring, I will share it later.) 
