--- a/_posts/2017-12-30-second.md
+++ b/_posts/2017-12-30-second.md
@@ -3,8 +3,9 @@ layout: post
 title: Why should we use Webpack & Babel(1)
 comment: true
 tags: [Webpack, Webpack-dev-server, babel]
-changefreq : daily
-priority : 1.0
+sitemap :
+  changefreq : daily
+  priority : 1.0
 ---
 
 ## Babel ?!
