--- a/_posts/2018-01-06-forth.md
+++ b/_posts/2018-01-06-forth.md
@@ -4,7 +4,7 @@ title: Async in Spring (1)
 comment: true
 tags: [Async, Springframework, Spring4]
 sitemap :
-  changefreq : daily
+  changefreq : Monthly
   priority : 1.0
 ---
 
