--- a/_posts/2018-01-08-fifth.md
+++ b/_posts/2018-01-08-fifth.md
@@ -4,7 +4,7 @@ title: How to use the async in SpringFramework.
 comment: true
 tags: [Async, Springframework, Spring4, ThreadPoolTaskExecutor, TaskExecutor, SimpleAsynTaskExecutor, customize]
 sitemap :
-  changefreq : daily
+  changefreq : Monthly
   priority : 1.0
 ---
 
