--- a/_posts/2017-12-30-second.md
+++ b/_posts/2017-12-30-second.md
@@ -4,7 +4,7 @@ title: Why should we use Webpack & Babel(1)
 comment: true
 tags: [Webpack, Webpack-dev-server, babel]
 sitemap :
-  changefreq : daily
+  changefreq : Monthly
   priority : 1.0
 ---
 
