--- a/_posts/2018-01-14-sixth.md
+++ b/_posts/2018-01-14-sixth.md
@@ -4,7 +4,7 @@ title: ListenableFuture in Spring.
 comment: true
 tags: [ListenableFuture, Spring]
 sitemap :
-  changefreq : daily
+  changefreq : Monthly
   priority : 1.0
 ---
 
