--- a/_posts/2018-03-01-tenth.md
+++ b/_posts/2018-03-01-tenth.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Making the framework of the back-end using the servlet in Java(1)
+title: Making the framework of the back-end for REST API using the servlet in Java(1)
 comment: true
 tags: [servlet, backend, framework, design pattern, OOP]
 sitemap :
@@ -8,7 +8,7 @@ sitemap :
   priority : 1.0
 ---
 
-When we have constructed the back-end, many people have used the *Spring framework* since the *Spring framework* has been revealed. So, now, Java has been the *Spring Framework*, and *Spring Framework* has just been the *Java*. Unlike the past, the part of technologically concentrating on things we have to do has been more reduced than before into the business logic. From this project, I will try to make the framework of the back-end using the servlet on the tomcat. A purpose I am going to try is to study for the *(OOP)Object-Oriented-Programming* and the *Design Pattern*. At first, we need how to run the servlet.
+When we have constructed the back-end for REST API, many people have used the *Spring framework* since the *Spring framework* has been revealed. So, now, Java has been the *Spring Framework*, and *Spring Framework* has just been the *Java*. Unlike the past, the part of technologically concentrating on things we have to do has been more reduced than before into the business logic. From this project, I will try to make the framework of the back-end using the servlet on the tomcat. A purpose I am going to try is to study for the *(OOP)Object-Oriented-Programming* and the *Design Pattern*. At first, we need how to run the servlet.
 
 <script src="https://gist.github.com/ijunc2/248f76503fbd527c1f1bb7b1b07e046f.js"></script>
 
