--- a/_posts/2018-03-02-eleventh.md
+++ b/_posts/2018-03-02-eleventh.md
@@ -10,7 +10,7 @@ sitemap :
 
 * Git: [Untitled yet](https://bitbucket.org/ijunc2/bek/src/master)   
 
-This framework would be composed of the two part. One is to handle the servlet requested from the client, which is *Core Package*, the other is to control the business logic, which is *Framework Package*.
+...This framework would be composed of the two part. One is to handle the servlet requested from the client, which is *Core Package*, the other is to control the business logic, which is *Framework Package*.
 
 ![pic1](/assets/img/post/2018-03-05/p1.png)
 
